# rftdi

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: eeprom.rs  list.rs  serial.rs
src/: bitmode.rs  buffer.rs  error.rs  lib.rs  port.rs  prop.rs  serial.rs
