[package]
name = "rftdi"
version = "0.0.0"
authors = ["Jonas Schievink <jonasschievink@gmail.com>"]
edition = "2018"
# TODO: Write description
#description = ""
documentation = "https://docs.rs/rftdi/"
repository = "https://github.com/jonas-schievink/rftdi.git"
# TODO: Add up to 5 keywords
#keywords = []
# TODO: Add categories
#categories = []
readme = "README.md"
license = "0BSD"

[badges]
travis-ci = { repository = "jonas-schievink/rftdi" }
maintenance = { status = "actively-developed" }

[dependencies]
rusb = "0.6.3"
log = "0.4.11"

[dev-dependencies]
structopt = "0.3.17"
env_logger = "0.7.1"

# cargo-release configuration
[package.metadata.release]
tag-message = "{{version}}"
no-dev-version = true
pre-release-commit-message = "Release {{version}}"

# Change the changelog's `Unreleased` section to refer to this release and
# prepend a new `Unreleased` section
[[package.metadata.release.pre-release-replacements]]
file    = "CHANGELOG.md"
search  = "## Unreleased\n"
replace = """
## Unreleased

No changes.

## [{{version}} - {{date}}](https://github.com/jonas-schievink/rftdi/releases/tag/v{{version}})
"""

# Bump the version inside the example manifest in `README.md`
[[package.metadata.release.pre-release-replacements]]
file    = "README.md"
search  = 'rftdi = "[a-z0-9\\.-]+"'
replace = 'rftdi = "{{version}}"'

# Bump the version referenced by the `html_root_url` attribute in `lib.rs`
[[package.metadata.release.pre-release-replacements]]
file    = "src/lib.rs"
search  = "https://docs.rs/rftdi/[a-z0-9\\.-]+"
replace = "https://docs.rs/rftdi/{{version}}"
